@@ -1,6 +1,13 @@
-FROM clojure:openjdk-11-lein-2.9.1
+FROM clojure:lein as lein
 WORKDIR /reitit
-COPY src src
 COPY project.clj project.clj
+COPY src src
 RUN lein uberjar
-CMD ["java", "-server", "-Xms2G", "-Xmx2G", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AggressiveOpts", "-Dvertx.disableMetrics=true", "-Dvertx.threadChecks=false", "-Dvertx.disableContextTimings=true", "-Dvertx.disableTCCL=true", "-XX:+UseStringDeduplication", "-Djava.net.preferIPv4Stack=true", "-jar", "target/hello-reitit-standalone.jar"]
+
+FROM openjdk:25-jdk-slim
+WORKDIR /reitit
+COPY --from=lein /reitit/target/hello-reitit-standalone.jar app.jar
+
+EXPOSE 8080
+
+CMD ["java", "-server", "-XX:+UseParallelGC", "-jar", "app.jar"]
